src/test/resources/annotator/Proto3IllegalExtend.proto
syntax = "proto3";

package annotator;

message RegularMessage {

}

extend <error descr="Cannot extend given type">RegularMessage</error> {

}